@@ -5,6 +5,7 @@ Revision history for beacon2-ri-tools
 	- Added examples directory with hg38 (GRCh38)
 	- Added spinner for interactive execution of 'bin/beacon'
 	- Added basic tests in t/
+    - Updated 'config.yaml' with placeholder {base}
 
 2.0.7  2025-02-22
     - Moved 'browser/web' to 'utils/bff_browser/static/assets'
